--- a/2. Calculator/style.css
+++ b/2. Calculator/style.css
@@ -65,6 +65,7 @@ input[type=number]::-webkit-outer-spin-button {
     font-size: 20px;
     font-weight: 700;
     padding: 5px;
+    cursor: pointer;
 
 }
 
@@ -82,6 +83,7 @@ input[type=number]::-webkit-outer-spin-button {
     font-size: 30px;
     background-color: #181B24;
     color: #3BC659;
+    cursor: pointer;
     box-shadow: -3px -3px 10px #0e732467, 3px 3px 10px #3BC659;
 }
 
